logs/mobility/build.make.081.log
[  0%] [  0%] [  0%] [  0%] Built target tf2_msgs_generate_messages_lisp
Built target geometry_msgs_generate_messages_py
Built target roscpp_generate_messages_py
Built target sensor_msgs_generate_messages_cpp
[  0%] [  0%] [  0%] Built target tf_generate_messages_cpp
Built target roscpp_generate_messages_lisp
Built target rosgraph_msgs_generate_messages_lisp
[  0%] Built target geometry_msgs_generate_messages_cpp
[  0%] [  0%] Built target geometry_msgs_generate_messages_lisp
Built target roscpp_generate_messages_cpp
[  0%] Built target std_msgs_generate_messages_py
[  0%] [  0%] [  0%] Built target actionlib_msgs_generate_messages_cpp
Built target actionlib_generate_messages_lisp
Built target actionlib_generate_messages_cpp
[  0%] Built target actionlib_generate_messages_py
[  0%] [  0%] Built target tf2_msgs_generate_messages_py
Built target actionlib_msgs_generate_messages_py
[  0%] [  0%] [  0%] Built target tf_generate_messages_lisp
[  0%] Built target actionlib_msgs_generate_messages_lisp
Built target sensor_msgs_generate_messages_py
Built target rosgraph_msgs_generate_messages_py
[  0%] Built target sensor_msgs_generate_messages_lisp
[  0%] [  0%] Built target tf_generate_messages_py
Built target std_msgs_generate_messages_lisp
[  0%] Built target tf2_msgs_generate_messages_cpp
[  0%] Built target std_msgs_generate_messages_cpp
[  0%] Built target rosgraph_msgs_generate_messages_cpp
[35m[1mScanning dependencies of target mobility
[0m[ 25%] [32mBuilding CXX object CMakeFiles/mobility.dir/src/PickUpController.cpp.o
[0m[ 50%] [32mBuilding CXX object CMakeFiles/mobility.dir/src/mobility.cpp.o
/home/steven/rover_workspace/src/mobility/src/PickUpController.cpp: In member function ‘PickUpResult PickUpController::pickUpSelectedTarget(bool)’:
/home/steven/rover_workspace/src/mobility/src/PickUpController.cpp:128:22: error: jump to case label [-fpermissive]
 case (PICKING_UP_CUBE):
                      ^
/home/steven/rover_workspace/src/mobility/src/PickUpController.cpp:111:7: error:   crosses initialization of ‘float timeToEnsureStraightening’
 float timeToEnsureStraightening = 0.0;
       ^
/home/steven/rover_workspace/src/mobility/src/PickUpController.cpp:140:32: error: jump to case label [-fpermissive]
 case (WAIT_BEFORE_RAISING_WRIST):
                                ^
/home/steven/rover_workspace/src/mobility/src/PickUpController.cpp:111:7: error:   crosses initialization of ‘float timeToEnsureStraightening’
 float timeToEnsureStraightening = 0.0;
       ^
/home/steven/rover_workspace/src/mobility/src/PickUpController.cpp:155:23: error: jump to case label [-fpermissive]
 case (VERIFYING_PICKUP):
                       ^
/home/steven/rover_workspace/src/mobility/src/PickUpController.cpp:111:7: error:   crosses initialization of ‘float timeToEnsureStraightening’
 float timeToEnsureStraightening = 0.0;
       ^
/home/steven/rover_workspace/src/mobility/src/PickUpController.cpp:173:27: error: jump to case label [-fpermissive]
 case(PICKUP_FAILED_BACK_UP):
                           ^
/home/steven/rover_workspace/src/mobility/src/PickUpController.cpp:111:7: error:   crosses initialization of ‘float timeToEnsureStraightening’
 float timeToEnsureStraightening = 0.0;
       ^
/home/steven/rover_workspace/src/mobility/src/PickUpController.cpp:192:19: error: jump to case label [-fpermissive]
 case (DONE_FAILING):
                   ^
/home/steven/rover_workspace/src/mobility/src/PickUpController.cpp:111:7: error:   crosses initialization of ‘float timeToEnsureStraightening’
 float timeToEnsureStraightening = 0.0;
       ^
/home/steven/rover_workspace/src/mobility/src/PickUpController.cpp:197:19: error: jump to case label [-fpermissive]
 case (DONE_SUCCESS):
                   ^
/home/steven/rover_workspace/src/mobility/src/PickUpController.cpp:111:7: error:   crosses initialization of ‘float timeToEnsureStraightening’
 float timeToEnsureStraightening = 0.0;
       ^
/home/steven/rover_workspace/src/mobility/src/PickUpController.cpp:204:1: error: jump to case label [-fpermissive]
 default:
 ^
/home/steven/rover_workspace/src/mobility/src/PickUpController.cpp:111:7: error:   crosses initialization of ‘float timeToEnsureStraightening’
 float timeToEnsureStraightening = 0.0;
       ^
make[2]: *** [CMakeFiles/mobility.dir/src/PickUpController.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
make[1]: *** [CMakeFiles/mobility.dir/all] Error 2
make: *** [all] Error 2
